--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Student B.Sc. Information Technology <br /></p>
+              <p>B.Sc. Information Technology <br /></p>
             </div>
           </div>
           <div class="text-container">
